--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -913,6 +913,13 @@ config MACH_FSM9XXX_SURF
 	  chipset based SURF evaluation board and
 	  FFA board.
 
+config MACH_VISKAN_HUASHAN
+	depends on ARCH_MSM8960
+	default n
+	bool "SONY HUASHAN"
+	help
+	  Support for the Sony Huashan
+
 endmenu
 
 config MSM_STACKED_MEMORY
