--- a/drivers/input/misc/Makefile
+++ b/drivers/input/misc/Makefile
@@ -64,3 +64,4 @@ obj-$(CONFIG_BOSCH_BMA150)              += bma150.o
 obj-$(CONFIG_STM_LIS3DH)		+= lis3dh_acc.o
 obj-$(CONFIG_INPUT_APDS9702)            += apds9702.o
 obj-$(CONFIG_INPUT_LSM303DLHC_ACCELEROMETER_LT) += lsm303dlhc_acc_lt.o
+obj-$(CONFIG_INPUT_L3GD20)		+= l3gd20_gyr_sysfs.o
